infrastructure/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: legendary
spec:
  replicas: 2
  selector:
    matchLabels:
      app: legendary
  template:
    metadata:
      labels:
        app: legendary
    spec:
      containers:
        - name: app
          image: registry.gitlab.com/mythic-insight/legendary:1.2.1
          ports:
            - containerPort: 4000
