infrastructure/kube.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: legendary
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: legendary
  namespace: legendary
spec:
  replicas: 2
  selector:
    matchLabels:
      app: legendary
  template:
    metadata:
      labels:
        app: legendary
    spec:
      containers:
        - name: app
          image: registry.gitlab.com/mythic-insight/legendary:2.9.1
          command: ["elixir"]
          args:
            - "--name"
            - "$(NAME)@$(POD_IP)"
            - "--cookie"
            - "$(SECRET_KEY_BASE)"
            - "-S"
            - "mix"
            - "phx.server"
          ports:
            - containerPort: 4000
            - containerPort: 4369
---
apiVersion: v1
kind: Service
metadata:
  name: legendary
  namespace: legendary
spec:
  selector:
    app: legendary
  ports:
    - protocol: TCP
      port: 80
      targetPort: 4000
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: legendary
  namespace: legendary
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  rules:
  - host: legendary-demo.mythicinsight.com
    http:
      paths:
      - backend:
          service:
            name: legendary
            port:
              number: 80
        path: /
        pathType: Prefix
  tls:
  - hosts:
    - legendary-demo.mythicinsight.com
    secretName: legendary-demo-cert
